# eventstream

./: .gitignore  .pre-commit-config.yaml  WORKFLOWS.md  pyproject.toml
.claude/: launch.json
demo/: os-upgrade.flow
design/: api.md  auth.md  cli.md  jobs.md  logic.md  server.md  workflow-format.md
eventstream/: __init__.py  config.py
eventstream/cli/: __init__.py  __main__.py  _run.py  ack.py  dlq.py  jobs.py  key.py  migrate.py  publish.py  pull.py  server.py  stream.py  sub.py  workflow.py
eventstream/logic/: __init__.py  apikeys.py  backend.py  dlq.py  engine.py  events.py  exceptions.py  jobs.py  streams.py  subscriptions.py  workflow_parser.py  workflows.py
eventstream/server/: __init__.py  __main__.py  auth.py  diagram.py  hooks.py  routes.py  static.py  templating.py  web.py  writes.py
eventstream/server/static/: diagram.js  style.css
eventstream/server/templates/: endpoints.html  index.html  job.html  jobs.html  layout.html  stream.html  subscription.html  workflow.html  workflows.html
integration-tests/: conftest.py  test_redis_integration.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_diagram.py  test_dlq.py  test_engine.py  test_events.py  test_jobs.py  test_server.py  test_streams.py  test_subscriptions.py  test_workflow_parser.py  test_workflows.py  test_writes.py
